{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 37,
  "lineage": "a263e831-2735-f3dc-09aa-0ef2710d2eca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c3f785650d32f00",
            "association_id": "eipassoc-0357981983a681be7",
            "domain": "vpc",
            "id": "eipalloc-05c3f785650d32f00",
            "instance": "i-033426c69e45f3ed8",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b83b2de6e8ba6464",
            "private_dns": "ip-10-0-101-38.us-east-2.compute.internal",
            "private_ip": "10.0.101.38",
            "public_dns": "ec2-3-15-51-230.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.51.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_vm",
            "aws_security_group.vm_sg",
            "data.http.my_public_ip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0233c2d874b811deb",
            "arn": "arn:aws:ec2:us-east-2:159649934406:instance/i-033426c69e45f3ed8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-033426c69e45f3ed8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b83b2de6e8ba6464",
            "private_dns": "ip-10-0-101-38.us-east-2.compute.internal",
            "private_ip": "10.0.101.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0185e4c3ea1959992",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-064992843d87d7515",
            "tags": {
              "Name": "application-vm",
              "createdBy": "listentolearn"
            },
            "tags_all": {
              "Name": "application-vm",
              "createdBy": "listentolearn"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cb791d124d62c0d6"
            ]
          },
          "dependencies": [
            "aws_security_group.vm_sg",
            "data.http.my_public_ip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159649934406:security-group/sg-0cb791d124d62c0d6",
            "description": "Allow incoming connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0cb791d124d62c0d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "154.72.170.135/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vm-security-group",
            "name_prefix": "",
            "owner_id": "159649934406",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-021c58f0df31c0e5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.my_public_ip",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159649934406:internet-gateway/igw-084b7c0a8d306f95b",
            "id": "igw-084b7c0a8d306f95b",
            "owner_id": "159649934406",
            "tags": {
              "Name": "application-vpc",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc",
              "createdBy": "\u003c%=username%\u003e"
            },
            "vpc_id": "vpc-021c58f0df31c0e5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-084b7c0a8d306f95b",
            "id": "r-rtb-03798b6412c0021071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03798b6412c002107",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159649934406:route-table/rtb-03798b6412c002107",
            "id": "rtb-03798b6412c002107",
            "owner_id": "159649934406",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "application-vpc-public",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc-public",
              "createdBy": "\u003c%=username%\u003e"
            },
            "timeouts": null,
            "vpc_id": "vpc-021c58f0df31c0e5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a169e0738756a29",
            "route_table_id": "rtb-03798b6412c002107",
            "subnet_id": "subnet-064992843d87d7515"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159649934406:subnet/subnet-064992843d87d7515",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064992843d87d7515",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159649934406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "application-vpc-public-us-east-2a",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc-public-us-east-2a",
              "createdBy": "\u003c%=username%\u003e"
            },
            "vpc_id": "vpc-021c58f0df31c0e5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:159649934406:vpc/vpc-021c58f0df31c0e5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f16c452ff60f04df",
            "default_route_table_id": "rtb-0706e83c96a5362ca",
            "default_security_group_id": "sg-06a0cb62057f888ca",
            "dhcp_options_id": "dopt-fd3fa796",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-021c58f0df31c0e5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0706e83c96a5362ca",
            "owner_id": "159649934406",
            "tags": {
              "Name": "application-vpc",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc",
              "createdBy": "\u003c%=username%\u003e"
            }
          }
        }
      ]
    }
  ]
}